--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="static/assets/css/main.css" />
+    <link rel="stylesheet" href="static/assets/css/custom-details.css">
     <noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
   </head>
   <body>
