--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="static/assets/css/main.css" />
     <link rel="stylesheet" href="static/assets/css/custom-details.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
   </head>
   <body>
